fix : alignment fixed

--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -393,6 +393,53 @@
         width: 100%;
     }
 
+
+/* ==========================
+   Mobile Slide Menu
+========================== */
+
+.mobile-menu{
+    position:fixed;
+    top:65px;          /* Height of navbar */
+    right:0;
+    width:250px;
+    height:calc(100vh - 72px);
+
+    background:#12121a;
+
+    transform:translateX(100%);
+    transition:transform .4s ease;
+
+    z-index:999;
+
+    padding:30px;
+
+    overflow-y:auto;
+}
+
+.mobile-menu.active{
+    transform:translateX(0);
+}
+
+.mobile-menu ul{
+    display:flex;
+    flex-direction:column;
+    gap:28px;
+}
+
+.mobile-menu a{
+    font-size:18px;
+    color:#a0a0b8;
+    transition:.3s;
+}
+
+.mobile-menu a:hover{
+    color:#fff;
+    transform:translateX(8px);
+}
+
+
+
     /*------------------------------------------------------------------------------------------------------------------------------------*/
 
     /* Buttons Container */
@@ -557,4 +604,20 @@
             font-size: 18px;
         }
 
+    }
+
+    /*------------------------------------------------------------------------------------------------------------------------------------*/
+
+    /* Remove Chrome Autofill Highlight forcing overide autofill*/ 
+
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    textarea:-webkit-autofill,
+    textarea:-webkit-autofill:hover,
+    textarea:-webkit-autofill:focus {
+        -webkit-box-shadow: 0 0 0px 1000px #12121a inset !important;
+        -webkit-text-fill-color: #e8e8f0 !important;
+        border: 1px solid #1e1e2a !important;
+        transition: background-color 5000s ease-in-out 0s;
     }
